# advent-of-code

./: .build.yml  .env.example  .gitignore  Pipfile  README.md  aoc  run.py
c/: CMakeLists.txt  Makefile  README.md
c/2021/: day1.c
c/src/: main.c  main.h  twenty-twenty-two.c  twenty-twenty-two.h  utils.c  utils.h
cli/aoc/: __init__.py
cpp/: CMakeLists.txt
cpp/2021/: day1.cpp
cpp/inc/: advent-of-code.h
cpp/lib/: advent-of-code.cpp
cpp/source/2021/: day1  day1.cpp
cpp/src/: CMakeLists.txt
cpp/src/2021/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp  day4.cpp
el/2025/: day1.el  day2.el
jl/2020/: day1.jl
jl/2021/: day1.jl
kt/2020/: README.md  build.gradle.kts
kt/2020/src/main/kotlin/: InputReader.kt  Runner.kt
kt/2020/src/main/kotlin/days/: Day1.kt  Day13.kt  Day2.kt  Day3.kt  Day4.kt  Day5.kt  Day6.kt  Day7.kt  Day8.kt
kt/2020/src/main/resources/: input_day_13.txt
py/: README.md  aoc.py  pyproject.toml
py/2021/: day1.py  day2.py
py/aoc/: __init__.py  utils.py  y2023d1.py
rs/2021/day1/src/: main.rs
rs/2022/: Cargo.toml
rs/2022/day1/: Cargo.toml
rs/2022/day1/src/: main.rs
rs/2022/utils/src/: lib.rs
rs/twenty-twenty-two/: Cargo.toml
rs/twenty-twenty-two/src/: main.rs
